<resources>
    <string name="app_name">Strange Journey Compendium</string>
    <string name="image">Image</string>
    <string name="result_item">Result Item</string>
    <string name="result">Result</string>
    <string name="skill_1">Skill 1</string>
    <string name="skill_2">Skill 2</string>
    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="alignment">Alignment</string>
    <string name="skill_3">Skill 3</string>
    <string name="source_1">Source 1</string>
    <string name="source_2">Source 2</string>
    <string name="source_3">Source 3</string>
    <string name="source_skills">Source Skills:</string>
    <string name="natural_skills">Innate Skills:</string>
    <string name="placeholder_for_demon_sprite">Placeholder for Demon sprite</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="resistances">Resistances:</string>
    <string name="resistance_array">Resistance Array</string>
    <string name="inherits_array">Inherit Array</string>
    <string name="inherits">Inherits:</string>
    <string name="ailment_array">Ailment Array</string>
    <string name="ailments">Ailments:</string>
    <string name="attack_attributes">Attack Attributes:</string>
    <string name="attack">Attack</string>
    <string name="attributes">no special attributes</string>
    <string name="logo">Logo</string>
    <string name="search_demon_by_name">Search Demon</string>
    <string name="search_demon_by_skill">Search Skill</string>
    <string name="cost">Cost:</string>
    <string name="effect">Effect:</string>
    <string name="element">Element:</string>
    <string name="rank">Rank:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="power">Power:</string>
    <string name="inherit">Inherit:</string>
    <string name="demons">Demons that know </string>
    <string name="none">none</string>
    <string name="demon_array">Demon Array</string>
    <string name="lvl">Lvl</string>
    <string name="hp">HP</string>
    <string name="mp">MP</string>
    <string name="st">St</string>
    <string name="ma">Ma</string>
    <string name="vi">Vi</string>
    <string name="ag">Ag</string>
    <string name="lu">Lu</string>
    <string name="gun">Gun:</string>
    <string name="phys">Phys:</string>
    <string name="fire">Fire:</string>
    <string name="ice">Ice:</string>
    <string name="elec">Elec:</string>
    <string name="wind">Wind:</string>
    <string name="curse">Curse:</string>
    <string name="expel">Expel:</string>
    <string name="poison">Poison:</string>
    <string name="paralyze">Paralyze:</string>
    <string name="stone">Stone:</string>
    <string name="strain">Strain:</string>
    <string name="sleep">Sleep:</string>
    <string name="charm">Charm:</string>
    <string name="fear">Fear:</string>
    <string name="mute">Mute:</string>
    <string name="bomb">Bomb:</string>
    <string name="containing">Demon sources containing</string>
    <string name="fusion_condition">Fusion Condition:</string>
    <string name="special_fusion">Special Fusion</string>
</resources>
