<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/demon_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/race" />

        <TextView
            android:id="@+id/demon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/demon_alignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alignment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/natural_skills" />

        <TextView
            android:id="@+id/demon_skill_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:text="@string/skill_1" />

        <TextView
            android:id="@+id/demon_skill_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_2" />

        <TextView
            android:id="@+id/demon_skill_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_skills" />

        <TextView
            android:id="@+id/demon_source_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_1" />

        <TextView
            android:id="@+id/demon_source_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_2" />

        <TextView
            android:id="@+id/demon_source_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resistances" />

        <TextView
            android:id="@+id/demon_resistances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resistance_array" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ailments" />

        <TextView
            android:id="@+id/demon_ailments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ailment_array" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/placeholder_image"
            android:cropToPadding="false"
            app:srcCompat="@drawable/placeholder" />
    </LinearLayout>

</LinearLayout>