<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DemonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/demon_race"
                android:text="@string/race" />

            <TextView
                android:id="@+id/demon_name"
                android:text="@string/name" />

            <TextView
                android:id="@+id/demon_alignment"
                android:text="@string/alignment" />
        </LinearLayout>

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/placeholder_image"
            android:cropToPadding="false"
            app:srcCompat="@drawable/placeholder" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/lvl" />

                <TextView android:text="@string/hp" />

                <TextView android:text="@string/mp" />

                <TextView android:text="@string/st" />

                <TextView android:text="@string/ma" />

                <TextView android:text="@string/vi" />

                <TextView android:text="@string/ag" />

                <TextView android:text="@string/lu" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/demon_lvl" />

                <TextView android:id="@+id/demon_hp" />

                <TextView android:id="@+id/demon_mp" />

                <TextView android:id="@+id/demon_st" />

                <TextView android:id="@+id/demon_ma" />

                <TextView android:id="@+id/demon_vi" />

                <TextView android:id="@+id/demon_ag" />

                <TextView android:id="@+id/demon_lu" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:text="@string/natural_skills" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView android:id="@+id/demon_skill_1" />

                <TextView android:id="@+id/demon_skill_2" />

                <TextView android:id="@+id/demon_skill_3" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/source_skills" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:id="@+id/demon_source_1" />

                <TextView android:id="@+id/demon_source_2" />

                <TextView android:id="@+id/demon_source_3" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TableLayout android:layout_width="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/resistances" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/phys" />

                    <TextView android:id="@+id/resist_phys" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/gun" />

                    <TextView android:id="@+id/resist_gun" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/fire" />

                    <TextView android:id="@+id/resist_fire" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/ice" />

                    <TextView android:id="@+id/resist_ice" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/elec" />

                    <TextView android:id="@+id/resist_elec" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/wind" />

                    <TextView android:id="@+id/resist_wind" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/expel" />

                    <TextView android:id="@+id/resist_expel" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/curse" />

                    <TextView android:id="@+id/resist_curse" />

                </TableRow>

            </TableLayout>

            <TableLayout android:layout_width="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/ailments" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/poison" />

                    <TextView android:id="@+id/resist_poison" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/paralyze" />

                    <TextView android:id="@+id/resist_paralyze" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/stone" />

                    <TextView android:id="@+id/resist_stone" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/strain" />

                    <TextView android:id="@+id/resist_strain" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/sleep" />

                    <TextView android:id="@+id/resist_sleep" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/charm" />

                    <TextView android:id="@+id/resist_charm" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/mute" />

                    <TextView android:id="@+id/resist_mute" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/fear" />

                    <TextView android:id="@+id/resist_fear" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/bomb" />

                    <TextView android:id="@+id/resist_bomb" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/inherits"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_weight="1"
                    android:text="@string/attack_attributes" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/demon_inherits"
                    android:text="@string/inherits_array" />

                <TextView
                    android:id="@+id/demon_attack"
                    android:layout_weight="1"
                    android:text="@string/attack" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/fusion_condition" />

            <TextView
                android:id="@+id/demon_fusion_condition"
                android:layout_width="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/special_fusion" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/demon_fusion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>
