<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/searchDemon"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:text="@string/search_demon_by_name"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/searchSkill"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:text="@string/search_demon_by_skill"
        android:textColor="@android:color/holo_blue_dark" />
</LinearLayout>